--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activities.LoginActivity">
 
     <LinearLayout
@@ -12,6 +13,17 @@
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/login_btn_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/ic_close_black_24dp"
+            app:civ_border_color="@android:color/white"
+            app:civ_border_width="0dp"/>
 
         <ImageView
             android:src="@drawable/logo"
