--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home"
-        android:title="首页" />
+        android:icon="@drawable/ic_today"
+        android:title="今日" />
     <item
         android:id="@+id/navigation_timetable"
         android:icon="@drawable/ic_timetable"
