--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -6,17 +6,17 @@
     app:startDestination="@id/navigation_home">
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.chennyh.simpletimetable.activities.HomeFragment"
+        android:name="com.chennyh.simpletimetable.fragment.TodayFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_today"/>
     <fragment
         android:id="@+id/navigation_timetable"
-        android:name="com.chennyh.simpletimetable.activities.TimetableFragment"
+        android:name="com.chennyh.simpletimetable.fragment.TimetableFragment"
         android:label="fragment_dashboard"
         tools:layout="@layout/fragment_timetable" />
     <fragment
         android:id="@+id/navigation_user"
-        android:name="com.chennyh.simpletimetable.activities.UserFragment"
+        android:name="com.chennyh.simpletimetable.fragment.UserFragment"
         android:label="fragment_notifications"
         tools:layout="@layout/fragment_user" />
 </navigation>
