修改为从服务器注册登录方式，添加retrofix依赖

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,11 +45,11 @@
                 android:layout_marginBottom="8dp">
 
                 <EditText
-                    android:id="@+id/login_input_email"
+                    android:id="@+id/login_input_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:hint="邮箱" />
+                    android:inputType="text"
+                    android:hint="用户名" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!--  Password Label -->
