--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,6 +6,8 @@
         <item>星期三</item>
         <item>星期四</item>
         <item>星期五</item>
+        <item>星期六</item>
+        <item>星期日</item>
     </string-array>
     <string-array name="start">
         <item>从第 1 节开始上</item>
